# awesome-ecs

./: CMakeLists.txt
cmake/: AwesomeECSConfig.cmake.in
include/AwesomeECS/: Component.hpp  Detail.hpp  Entity.hpp
src/: Entity.cpp
test/: CMakeLists.txt
test/src/: main.cpp
